--- a/front_end/HTML/index.html
+++ b/front_end/HTML/index.html
@@ -30,7 +30,7 @@
                     placeholder="Senha..."
                 />
                 <button id="botaoEntrar">Entrar</button>
-                <a href="/">Cadastre-se</a>
+                <a href="./novo_usuario.html">Cadastre-se</a>
                 <a href="/">Esqueci minha senha</a>
             </section>
         </div>
